# Laser_app

./: CMakeLists.txt  CMakeLists1.txt  說明.txt
log/: log_20251201_152851.txt  log_20251201_152923.txt  log_20251202_101649.txt  log_20251202_114224.txt  log_20251202_114442.txt
src/: main.cpp
src/Gui/: Login.cpp  Login.h  Login.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Simulation.cpp  Simulation.h  Simulation.ui  StressTesting.cpp  StressTesting.h  StressTesting.ui
src/app/: AutoProcess.cpp  AutoProcess.h  ConnectDevice.cpp  ConnectDevice.h  PowerCheck.cpp  PowerCheck.h
styles/: laser_theme.qss
